--- a/index.css
+++ b/index.css
@@ -73,10 +73,10 @@ a {
 .replay {
   display: none;
   position: absolute;
-  top: 10px;
-  right: 10px;
-  width: 30px;
-  height: 25px;
+  top: 1vw;
+  right: 1vw;
+  width: 3vw;
+  height: 3vw;
   cursor: pointer;
   z-index: 3;
   background-image: url('visuals/replay.png');
@@ -86,10 +86,10 @@ a {
 .fire {
   display: none;
   position: absolute;
-  bottom: 10px;
-  right: 10px;
-  width: 30px;
-  height: 25px;
+  bottom: 1vw;
+  right: 1vw;
+  width: 3vw;
+  height: 3vw;
   cursor: pointer;
   z-index: 3;
   background-image: url('visuals/fire.png');
@@ -99,10 +99,10 @@ a {
 .jump {
   display: none;
   position: absolute;
-  bottom: 10px;
-  left: 10px;
-  width: 30px;
-  height: 25px;
+  bottom: 1vw;
+  left: 1vw;
+  width: 3vw;
+  height: 3vw;
   cursor: pointer;
   z-index: 3;
   background-image: url('visuals/jump.png');
@@ -112,10 +112,10 @@ a {
 .sound {
   display: none;
   position: absolute;
-  top: 10px;
-  left: 10px;
-  width: 30px;
-  height: 25px;
+  top: 1vw;
+  left: 1vw;
+  width: 3vw;
+  height: 3vw;
   cursor: pointer;
   z-index: 3;
 }
