--- a/index.css
+++ b/index.css
@@ -45,31 +45,6 @@ a {
   left: 5px;
 }
 
-#menu {
-  position: absolute;
-  width: 80vw;
-  height: 48vw;
-  border: 1px solid black;
-  z-index: 2;
-  text-align: center;
-  background-color: grey;
-}
-
-#progress {
-  height: 12%;
-  margin: auto;
-  position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
-}
-#percent {
-  color: white;
-  font-weight: bold;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-}
-#progress-bar {
-  width: 200px;
-}
-
 .replay {
   display: none;
   position: absolute;
@@ -81,6 +56,7 @@ a {
   z-index: 3;
   background-image: url('visuals/replay.png');
   background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .fire {
@@ -94,6 +70,7 @@ a {
   z-index: 3;
   background-image: url('visuals/fire.png');
   background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .jump {
@@ -107,6 +84,7 @@ a {
   z-index: 3;
   background-image: url('visuals/jump.png');
   background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .sound {
@@ -122,80 +100,18 @@ a {
 .sound-on {
   background-image: url('visuals/soundOn.png');
   background-repeat: no-repeat;
+  background-size: contain;
 }
 .sound-off {
   background-image: url('visuals/soundOff.png');
   background-repeat: no-repeat;
-}
-
-#main {
-  display: none;
-  height: 60%;
-  overflow: auto;
-  margin: auto;
-  position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
-}
-#main h1 {
-  color: white;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-}
-
-.button {
-  display: block;
-  width: 150px;
-  margin: 0 auto;
-  height: 30px;
-  line-height: 30px;
-  border: 1px solid #AA2666;
-  color: white;
-  font-weight: bold;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-  background-color: #FB1886;
-  background-image: -webkit-linear-gradient(bottom, #FB1886 0%, #B30D5D 100%);
-  background-image:         linear-gradient(to bottom, #FB1886 0%, #B30D5D 100%);
-  border-radius: 5px;
-}
-
-.button:hover {
-  background-color: #B30D5D;
-  background-image: -webkit-linear-gradient(bottom, #B30D5D 0%, #FB1886 100%);
-  background-image:         linear-gradient(to bottom, #B30D5D 0%, #FB1886 100%);
-}
-
-#credits {
-  display: none;
-  line-height: 30px;
-  margin: auto;
-  position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
-}
-#credits li {
-  padding: 5px 0;
-}
-
-.artwork, .music, .developer {
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-}
-
-.artwork {
-  color: #fa8526;
-}
-.music {
-  color: #e6e71f;
-}
-.developer {
-  color: #13eb8a;
-}
-
-.back, .back:hover {
-  margin-top: 10px;
+  background-size: contain;
 }
 
 #game-over {
   display: none;
   text-align: center;
-  padding-top: 92px;
+  padding-top: 10vw;
   z-index: 1;
   width: 80vw;
   height: 48vw;
